feat: Add EtcdLeaseManager for distributed orchestration
Implement etcd-backed lease management using a single etcd lease per
orchestrator for efficient lifecycle management:

- EtcdLeaseManager implementing full LeaseManager trait
- Atomic acquire via etcd compare-and-swap transactions
- release_all via single lease revocation (deletes all keys)
- watch_orphans via etcd watch for DELETE events
- Deterministic orchestrator ID (CLI arg → STEPFLOW_ORCHESTRATOR_ID → HOSTNAME → random)
- Config wiring with Etcd variant in LeaseManagerConfig
- Integration tests with testcontainers (auto-skip without Docker)

--- a/schemas/stepflow-config.json
+++ b/schemas/stepflow-config.json
@@ -125,6 +125,7 @@
       "oneOf": [
         {
           "type": "object",
+          "description": "No-op lease management (single orchestrator mode).\n\nThis is the default for single-node deployments where there's no need\nfor distributed coordination. All lease requests succeed immediately.",
           "required": [
             "type"
           ],
@@ -134,6 +135,27 @@
               "const": "noOp"
             }
           }
+        },
+        {
+          "allOf": [
+            {
+              "$ref": "#/$defs/EtcdLeaseManagerConfig",
+              "description": "etcd-backed lease management for distributed deployments.\n\nUses etcd v3 for distributed coordination with one etcd lease per\norchestrator. Provides automatic cleanup on crash, push-based orphan\ndetection, and efficient `release_all` via lease revocation."
+            },
+            {
+              "type": "object",
+              "required": [
+                "type"
+              ],
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "const": "etcd"
+                }
+              }
+            }
+          ],
+          "description": "etcd-backed lease management for distributed deployments.\n\nUses etcd v3 for distributed coordination with one etcd lease per\norchestrator. Provides automatic cleanup on crash, push-based orphan\ndetection, and efficient `release_all` via lease revocation."
         }
       ],
       "description": "Configuration for the lease manager used in distributed deployments.\n\nThe lease manager handles run ownership in multi-orchestrator scenarios,\nensuring only one orchestrator executes a given run at a time."
@@ -684,6 +706,26 @@
         },
         "autoMigrate": {
           "type": "boolean"
+        }
+      }
+    },
+    "EtcdLeaseManagerConfig": {
+      "type": "object",
+      "description": "Configuration for the etcd lease manager.",
+      "required": [
+        "endpoints"
+      ],
+      "properties": {
+        "endpoints": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "etcd endpoints (e.g., `[\"http://localhost:2379\"]`)."
+        },
+        "key_prefix": {
+          "type": "string",
+          "description": "Key prefix for all stepflow lease keys."
         }
       }
     }
