--- a/examples/production/k8s/stepflow-o11y/otel-collector/deployment.yaml
+++ b/examples/production/k8s/stepflow-o11y/otel-collector/deployment.yaml
@@ -15,92 +15,95 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: loki
-  namespace: stepflow-o12y
+  name: otel-collector
+  namespace: stepflow-o11y
   labels:
-    app: loki
+    app: otel-collector
     component: observability
 spec:
   type: ClusterIP
   ports:
-    - name: http
-      port: 3100
-      targetPort: 3100
+    - name: otlp-grpc
+      port: 4317
+      targetPort: 4317
       protocol: TCP
-    - name: grpc
-      port: 9096
-      targetPort: 9096
+    - name: otlp-http
+      port: 4318
+      targetPort: 4318
+      protocol: TCP
+    - name: metrics
+      port: 8888
+      targetPort: 8888
+      protocol: TCP
+    - name: prom-exporter
+      port: 8889
+      targetPort: 8889
       protocol: TCP
   selector:
-    app: loki
+    app: otel-collector
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
-  name: loki
-  namespace: stepflow-o12y
+  name: otel-collector
+  namespace: stepflow-o11y
   labels:
-    app: loki
+    app: otel-collector
     component: observability
 spec:
-  serviceName: loki
   replicas: 1
   selector:
     matchLabels:
-      app: loki
+      app: otel-collector
   template:
     metadata:
       labels:
-        app: loki
+        app: otel-collector
         component: observability
     spec:
       containers:
-      - name: loki
-        image: grafana/loki:2.9.4
+      - name: otel-collector
+        image: otel/opentelemetry-collector-contrib:0.95.0
         args:
-          - -config.file=/etc/loki/local-config.yaml
+          - "--config=/etc/otel-collector-config.yaml"
         ports:
-          - name: http
-            containerPort: 3100
+          - name: otlp-grpc
+            containerPort: 4317
             protocol: TCP
-          - name: grpc
-            containerPort: 9096
+          - name: otlp-http
+            containerPort: 4318
+            protocol: TCP
+          - name: metrics
+            containerPort: 8888
+            protocol: TCP
+          - name: prom-exporter
+            containerPort: 8889
             protocol: TCP
         volumeMounts:
           - name: config
-            mountPath: /etc/loki/local-config.yaml
+            mountPath: /etc/otel-collector-config.yaml
             subPath: config.yaml
             readOnly: true
-          - name: data
-            mountPath: /loki
         resources:
           requests:
             memory: "256Mi"
             cpu: "100m"
           limits:
-            memory: "1Gi"
+            memory: "512Mi"
             cpu: "500m"
         livenessProbe:
           httpGet:
-            path: /ready
-            port: 3100
-          initialDelaySeconds: 30
+            path: /
+            port: 13133
+          initialDelaySeconds: 10
           periodSeconds: 10
         readinessProbe:
           httpGet:
-            path: /ready
-            port: 3100
-          initialDelaySeconds: 10
+            path: /
+            port: 13133
+          initialDelaySeconds: 5
           periodSeconds: 5
       volumes:
         - name: config
           configMap:
-            name: loki-config
-  volumeClaimTemplates:
-    - metadata:
-        name: data
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 10Gi
+            name: otel-collector-config
