feat: Wire LeaseManager into production code and remove renew_lease
- Remove renew_lease from trait, all impls, and compliance tests
  (redundant with single-lease-per-orchestrator heartbeat model)
- Add OrchestratorId to StepflowEnvironment via extension trait
  and environment builder for access during execution
- Wire acquire_lease in submit_run to create etcd keys for orphan
  detection, and release_lease in FlowExecutor::spawn on completion
- Add heartbeat_loop background task that sends periodic heartbeats
  and detects stale orchestrators via list_orchestrators +
  orphan_runs_by_stale_orchestrators
- Add lease_ttl_secs to RecoveryConfig (default 30s, heartbeat at
  ttl/3)
- Update docs: remove renew_lease references, add etcd config
  example, document leaseTtlSecs

--- a/schemas/stepflow-config.json
+++ b/schemas/stepflow-config.json
@@ -187,6 +187,13 @@
           "description": "Maximum number of orphaned runs to claim per check interval.\n\nLimits how many runs are claimed in each periodic check to avoid\noverwhelming a single orchestrator. Default: 10.",
           "default": 10,
           "minimum": 0
+        },
+        "leaseTtlSecs": {
+          "type": "integer",
+          "format": "int64",
+          "description": "TTL in seconds for the orchestrator lease and heartbeats.\n\nThe heartbeat interval is automatically set to `lease_ttl_secs / 3`.\nIf an orchestrator stops sending heartbeats, its lease expires after this\nduration and its runs become eligible for recovery. Default: 30 seconds.",
+          "default": 30,
+          "minimum": 0
         }
       }
     },
