--- a/examples/kubernetes-batch-demo/docker/Dockerfile.component-server
+++ b/examples/kubernetes-batch-demo/docker/Dockerfile.component-server
@@ -14,35 +14,65 @@
 
 # Dockerfile for Python Component Server
 # Provides HTTP-based component execution for Stepflow workflows
+# Build context: repository root (stepflow/)
 
-FROM python:3.12-slim
+# Stage 1: Dependency installation (cached layer)
+FROM python:3.12-slim AS deps
 
 WORKDIR /app
 
-# Install uv for fast Python package management
-RUN pip install --no-cache-dir uv
+# Install uv from official image (pinned version for reproducibility)
+COPY --from=ghcr.io/astral-sh/uv:0.6.14 /uv /bin/uv
 
-# Copy local stepflow-py SDK (build context is repo root)
-COPY sdks/python /tmp/stepflow-py
+# Copy dependency specification files for caching
+# stepflow-py workspace
+COPY sdks/python/pyproject.toml sdks/python/uv.lock ./sdks/python/
+COPY sdks/python/stepflow-py/pyproject.toml ./sdks/python/stepflow-py/
+COPY sdks/python/stepflow-orchestrator/pyproject.toml ./sdks/python/stepflow-orchestrator/
 
-# Install stepflow-py from local copy with HTTP support
-RUN uv pip install --system /tmp/stepflow-py[http]
+# Create minimal package structure for uv to resolve dependencies
+RUN mkdir -p sdks/python/stepflow-py/src/stepflow_py && \
+    touch sdks/python/stepflow-py/src/stepflow_py/__init__.py && \
+    mkdir -p sdks/python/stepflow-orchestrator/src/stepflow_orchestrator && \
+    touch sdks/python/stepflow-orchestrator/src/stepflow_orchestrator/__init__.py
 
-# Copy component server code (build context is repo root)
+# Install dependencies only (cached unless pyproject.toml/uv.lock change)
+RUN cd sdks/python && uv sync --frozen --no-install-workspace --no-dev --extra http
+
+
+# Stage 2: Application code (changes frequently, but deps layer is cached)
+FROM deps AS builder
+
+# Copy full source code
+COPY sdks/python ./sdks/python/
+
+# Install the actual packages (deps already installed)
+RUN cd sdks/python && uv sync --frozen --no-dev --extra http
+
+
+# Stage 3: Minimal runtime image (no build tools)
+FROM python:3.12-slim AS runtime
+
+WORKDIR /app
+
+# Copy virtual environment from builder
+COPY --from=builder /app/sdks/python/.venv ./sdks/python/.venv
+ENV PATH="/app/sdks/python/.venv/bin:$PATH"
+
+# Copy component server code
 COPY examples/kubernetes-batch-demo/docker/components.py /app/
 
 # Create non-root user
-RUN useradd -m -u 1000 stepflow && \
-    chown -R stepflow:stepflow /app
-
+RUN useradd -m -u 1000 stepflow \
+    && chown -R stepflow:stepflow /app
 USER stepflow
 
 # Expose HTTP port
 EXPOSE 8080
 
-# Health check
+# Health check - using urllib (no external deps needed)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8080/health')" || exit 1
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8080/health')" || exit 1
 
 # Run component server in HTTP mode
 CMD ["python", "components.py", "--http"]
