refactor: Make etcd support an optional feature flag
Move EtcdLeaseManagerConfig into stepflow-config so the config enum
always deserializes regardless of feature flags. The actual etcd
connection is gated behind `#[cfg(feature = "etcd")]` with a clear
runtime error when disabled.

- Add `etcd` feature to stepflow-config (optional dep on stepflow-state-etcd)
- Add `etcd` feature to stepflow-cli (default-enabled, forwards to config)
- Update CI: langflow builds with --no-default-features (no protoc needed)
- Update CI: rust-checks installs protoc for --all-features builds
- Update scripts: check-rust.sh uses --all-features for tests
- Update scripts: test-integration.sh uses --no-default-features in CI

--- a/.github/actions/langflow-checks/action.yml
+++ b/.github/actions/langflow-checks/action.yml
@@ -40,7 +40,7 @@ runs:
 
     - name: Build Stepflow binary (needed for integration tests)
       shell: bash
-      run: cargo build
+      run: cargo build --no-default-features
       working-directory: stepflow-rs
 
     # Run Langflow integration checks using the shared script
