--- a/stepflow-rs/crates/stepflow-config/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-config/Cargo.toml
@@ -27,10 +27,13 @@ stepflow-core.workspace = true
 stepflow-plugin.workspace = true
 stepflow-protocol.workspace = true
 stepflow-state.workspace = true
-stepflow-state-etcd.workspace = true
+stepflow-state-etcd = { workspace = true, optional = true }
 stepflow-state-sql.workspace = true
 stepflow-mock.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 log.workspace = true
 utoipa.workspace = true
+
+[features]
+etcd = ["dep:stepflow-state-etcd"]
