--- a/stepflow-rs/crates/stepflow-state-etcd/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state-etcd/Cargo.toml
@@ -19,6 +19,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 stepflow-state = { workspace = true }
 tokio = { workspace = true }
+utoipa = { workspace = true }
 uuid = { workspace = true }
 
 [dev-dependencies]
