--- a/examples/production/k8s/stepflow/loadbalancer/deployment.yaml
+++ b/examples/production/k8s/stepflow/loadbalancer/deployment.yaml
@@ -31,10 +31,16 @@ spec:
         app: stepflow-load-balancer
         component: load-balancer
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
       containers:
       - name: load-balancer
         image: ghcr.io/stepflow-ai/stepflow/stepflow-load-balancer:alpine-0.9.0
         imagePullPolicy: IfNotPresent
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
         ports:
         - name: http
           containerPort: 8080
