refactor: Add etcd default feature to stepflow-server
Both binary crates (stepflow-cli, stepflow-server) now include etcd
support by default. CI builds that lack protoc use
--no-default-features to exclude it.

- Add default etcd feature to stepflow-server/Cargo.toml
- Langflow CI: build stepflow-server with --no-default-features and
  set STEPFLOW_DEV_BINARY to skip script rebuild
- Integration CI: build stepflow-cli with --no-default-features

--- a/.github/actions/langflow-checks/action.yml
+++ b/.github/actions/langflow-checks/action.yml
@@ -40,7 +40,7 @@ runs:
 
     - name: Build Stepflow binary (needed for integration tests)
       shell: bash
-      run: cargo build --no-default-features
+      run: cargo build -p stepflow-server --no-default-features
       working-directory: stepflow-rs
 
     # Run Langflow integration checks using the shared script
@@ -50,3 +50,4 @@ runs:
       run: ./scripts/check-langflow.sh -v
       env:
         OPENAI_API_KEY: ${{ inputs.openai-api-key }}
+        STEPFLOW_DEV_BINARY: stepflow-rs/target/debug/stepflow-server
