fix: Disable stepflow-server default features in workspace dep
The workspace dependency for stepflow-server now sets
default-features = false, so stepflow-cli controls the etcd
feature entirely. Without this, --no-default-features on
stepflow-cli still pulled in etcd via stepflow-server's defaults.

--- a/stepflow-rs/crates/stepflow-cli/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-cli/Cargo.toml
@@ -52,7 +52,7 @@ testcontainers.workspace = true
 
 [features]
 default = ["etcd"]
-etcd = ["stepflow-config/etcd"]
+etcd = ["stepflow-config/etcd", "stepflow-server/etcd"]
 
 [[bin]]
 name = "stepflow"
