--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -106,7 +106,7 @@ stepflow-mock = { path = "./crates/stepflow-mock" }
 stepflow-observability = { path = "./crates/stepflow-observability" }
 stepflow-plugin = { path = "./crates/stepflow-plugin" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
-stepflow-server = { path = "./crates/stepflow-server" }
+stepflow-server = { path = "./crates/stepflow-server", default-features = false }
 stepflow-state = { path = "./crates/stepflow-state" }
 stepflow-state-etcd = { path = "./crates/stepflow-state-etcd" }
 stepflow-state-sql = { path = "./crates/stepflow-state-sql" }
