fix: Use absolute path for STEPFLOW_DEV_BINARY in langflow CI
The check-langflow.sh script changes directory before checking the
binary path, so the relative path didn't resolve correctly.

--- a/.github/actions/langflow-checks/action.yml
+++ b/.github/actions/langflow-checks/action.yml
@@ -50,4 +50,4 @@ runs:
       run: ./scripts/check-langflow.sh -v
       env:
         OPENAI_API_KEY: ${{ inputs.openai-api-key }}
-        STEPFLOW_DEV_BINARY: stepflow-rs/target/debug/stepflow-server
+        STEPFLOW_DEV_BINARY: ${{ github.workspace }}/stepflow-rs/target/debug/stepflow-server
