feat: Add EtcdLeaseManager for distributed orchestration (#606)
* feat: Add EtcdLeaseManager for distributed orchestration

Implement etcd-backed lease management using a single etcd lease per
orchestrator for efficient lifecycle management:

- EtcdLeaseManager implementing full LeaseManager trait
- Atomic acquire via etcd compare-and-swap transactions
- release_all via single lease revocation (deletes all keys)
- watch_orphans via etcd watch for DELETE events
- Deterministic orchestrator ID (CLI arg → STEPFLOW_ORCHESTRATOR_ID → HOSTNAME → random)
- Config wiring with Etcd variant in LeaseManagerConfig
- Integration tests with testcontainers (auto-skip without Docker)

* fix: Address PR review comments for EtcdLeaseManager

- Fix ensure_lease doc comment to accurately describe behavior (no
  revocation, TTL only applied on first grant)
- Return error instead of silent 1h fallback for invalid TTL duration
- Reuse long-lived keep-alive stream in heartbeat instead of creating
  a new gRPC stream per call
- Return error on malformed data in list_orchestrators instead of
  silently fabricating timestamps
- Derive expires_at from etcd lease TTL in OwnedBy response to avoid
  returning stale stored timestamps
- Move DOCKER_HOST initialization to LazyLock for thread-safe one-time
  setup, avoid unwrap on HOME env var

* chore: fmt

* refactor: Promote multi-orchestrator test to compliance suite

- Add test_list_orchestrators_multiple_orchestrators to the compliance
  suite (verifies correct run counts across two orchestrators)
- Remove 4 redundant etcd integration tests that duplicated compliance
  suite coverage (contention, release_all, heartbeat, list_orchestrators)
- Keep 3 etcd-specific tests: compliance suite, config-based connect,
  and watch_orphans (push-based orphan detection)

* feat: Wire LeaseManager into production code and remove renew_lease

- Remove renew_lease from trait, all impls, and compliance tests
  (redundant with single-lease-per-orchestrator heart

--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -106,8 +106,9 @@ stepflow-mock = { path = "./crates/stepflow-mock" }
 stepflow-observability = { path = "./crates/stepflow-observability" }
 stepflow-plugin = { path = "./crates/stepflow-plugin" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
-stepflow-server = { path = "./crates/stepflow-server" }
+stepflow-server = { path = "./crates/stepflow-server", default-features = false }
 stepflow-state = { path = "./crates/stepflow-state" }
+stepflow-state-etcd = { path = "./crates/stepflow-state-etcd" }
 stepflow-state-sql = { path = "./crates/stepflow-state-sql" }
 stepflow-typecheck = { path = "./crates/stepflow-typecheck" }
 tempfile = "3.8"
