--- a/schemas/stepflow-config.json
+++ b/schemas/stepflow-config.json
@@ -125,6 +125,7 @@
       "oneOf": [
         {
           "type": "object",
+          "description": "No-op lease management (single orchestrator mode).\n\nThis is the default for single-node deployments where there's no need\nfor distributed coordination. All lease requests succeed immediately.",
           "required": [
             "type"
           ],
@@ -134,6 +135,27 @@
               "const": "noOp"
             }
           }
+        },
+        {
+          "allOf": [
+            {
+              "$ref": "#/$defs/EtcdLeaseManagerConfig",
+              "description": "etcd-backed lease management for distributed deployments.\n\nUses etcd v3 for distributed coordination with one etcd lease per\norchestrator. Provides automatic cleanup on crash, push-based orphan\ndetection, and efficient `release_all` via lease revocation."
+            },
+            {
+              "type": "object",
+              "required": [
+                "type"
+              ],
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "const": "etcd"
+                }
+              }
+            }
+          ],
+          "description": "etcd-backed lease management for distributed deployments.\n\nUses etcd v3 for distributed coordination with one etcd lease per\norchestrator. Provides automatic cleanup on crash, push-based orphan\ndetection, and efficient `release_all` via lease revocation."
         }
       ],
       "description": "Configuration for the lease manager used in distributed deployments.\n\nThe lease manager handles run ownership in multi-orchestrator scenarios,\nensuring only one orchestrator executes a given run at a time."
@@ -164,6 +186,13 @@
           "type": "integer",
           "description": "Maximum number of orphaned runs to claim per check interval.\n\nLimits how many runs are claimed in each periodic check to avoid\noverwhelming a single orchestrator. Default: 10.",
           "default": 10,
+          "minimum": 0
+        },
+        "leaseTtlSecs": {
+          "type": "integer",
+          "format": "int64",
+          "description": "TTL in seconds for the orchestrator lease and heartbeats.\n\nThe heartbeat interval is automatically set to `lease_ttl_secs / 3`.\nIf an orchestrator stops sending heartbeats, its lease expires after this\nduration and its runs become eligible for recovery. Default: 30 seconds.",
+          "default": 30,
           "minimum": 0
         }
       }
@@ -684,6 +713,26 @@
         },
         "autoMigrate": {
           "type": "boolean"
+        }
+      }
+    },
+    "EtcdLeaseManagerConfig": {
+      "type": "object",
+      "description": "Configuration for the etcd lease manager.",
+      "required": [
+        "endpoints"
+      ],
+      "properties": {
+        "endpoints": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "etcd endpoints (e.g., `[\"http://localhost:2379\"]`)."
+        },
+        "key_prefix": {
+          "type": "string",
+          "description": "Key prefix for all stepflow lease keys."
         }
       }
     }
