--- a/stepflow-rs/crates/stepflow-state/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state/Cargo.toml
@@ -26,6 +26,8 @@ serde.workspace = true
 serde_json.workspace = true
 stepflow-core.workspace = true
 stepflow-dtos.workspace = true
+tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+utoipa.workspace = true
 uuid.workspace = true
