feat: Add blob references and binary blob support
Add the $blob sentinel (BlobRef) for representing blobified data in JSON
values, BlobType::Binary for raw byte storage, and blobify/resolve
utilities for automatic large value handling.

Rust changes:
- Add BlobType::Binary variant and BlobValue::Binary(Vec<u8>)
- Add BlobId::from_binary() and BlobId::compute() for type-aware hashing
- Create blob_ref.rs with BlobRef struct, from_value/to_value, is_blob_ref
- Create blob_ref_ops.rs with blobify_inputs() and resolve_blob_refs()
- Add put_blob_binary/get_blob_binary convenience methods to BlobStore trait
- Add binary blob compliance tests
- Update all blob store implementations (in-memory, filesystem, SQLite)

Python changes:
- Create blob_ref.py with BlobRef, is_blob_ref, blobify_inputs, resolve_blob_refs
- Add put_blob_binary/get_blob_binary to blob_store module
- Add BlobType.BINARY to generated API models
- Update OpenAPI schema

--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -16,6 +16,7 @@ arc-swap = "1.7"
 async-stream = "0.3"
 async-trait = "0.1"
 axum = "0.8"
+base64 = "0.22"
 bit-set = "0.8.0"
 bytes = "1.5"
 chrono = { version = "0.4", features = ["serde"] }
