--- a/stepflow-rs/crates/stepflow-state/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 doctest = false
 
 [dependencies]
+base64.workspace = true
 bytes.workspace = true
 chrono.workspace = true
 dashmap.workspace = true
